--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0",
     "typescript": "^4.1.3",
     "typescript-eslint": "0.0.1-alpha.0",
     "uri-js": "^4.4.0"
