--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,18 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "seed": "node ./seed"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-youtube-embed": "^2.2.2",
     "vuetify": "^2.4.2",
     "vuex": "^3.6.0",
+    "vuex-persistedstate": "^4.0.0-beta.3",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
