--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0",
     "typescript": "^4.1.3",
